tests/baselines/reference/parserExportAssignment7.errors.txt
==== tests/cases/compiler/parserExportAssignment7.ts (2 errors) ====
    export class C {
    }
    
    export = B;
    ~~~~~~~~~~~
!!! parserExportAssignment7.ts(4,1): error TS2095: Cannot find name 'B'.
    ~~~~~~~~~~~
!!! parserExportAssignment7.ts(4,1): error TS2245: Export assignment not allowed in module with exported element.